--- a/quick-lab/package.json
+++ b/quick-lab/package.json
@@ -16,7 +16,9 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
