--- a/quick-lab/package.json
+++ b/quick-lab/package.json
@@ -2,7 +2,7 @@
   "name": "quick-lab",
   "version": "0.1.0",
   "private": true,
-  "proxy":"" ,
+  "proxy": "",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -16,6 +16,7 @@
     "@types/react-select": "^5.0.1",
     "axios": "^0.24.0",
     "cdbreact": "^1.5.3",
+    "proxy": "http://localhost:3001/",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
@@ -27,8 +28,7 @@
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "proxy":"http://localhost:3001/"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
